add metadata to drs object
