# htsget_server/drs_openapi.yaml
@@ -409,6 +409,9 @@ components:
             about this `DrsObject` from external metadata sources. These
             aliases can be used to represent secondary
             accession numbers or external GUIDs.
+        metadata:
+          type: object
+          description: metadata about the experiment (see Experiment in ingest_openapi.yaml)
     AnalysisDrsObject:
       type: object
       description: A DrsObject that describes a sequencing analysis. It usually will consist of a data file, e.g. a variant or read file, and its associated index file. Its contents should also include any associated Experiments (as ExperimentContentObjects), ordered in order of appearance in the associated variant/read files.
@@ -518,6 +521,9 @@ components:
             = md5( concat( 5e089d29, 72794b6d ) )
             = md5( 5e089d2972794b6d )
             = f7a29a04
+        metadata:
+          type: object
+          description: metadata about the analysis (see Analysis in ingest_openapi.yaml)
     AnalysisDataDrsObject:
       type: object
       description: A DrsObject that describes a analysis data file, e.g. a variant or read file.
